# wavegru-vocoder

./: README.md  config.yaml  dsp.py  extract_mel_mu.py  extract_weight_and_mask.py  inference.py  ljs.py  pyproject.toml  tf_data.py  train.py  train_on_tpu.py  utils.py  wavegru.py
